apps/suggestarr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: suggestarr
  namespace: suggestarr
spec:
  selector:
    app: suggestarr
  ports:
    - port: 80
      targetPort: 5000
